--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "Damian Sire <damiansire@hotmail.com>",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^2.0.15"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.1"
   }
 }
