--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-promise-router": "^4.1.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1"
   }
